--- a/templates/error.html
+++ b/templates/error.html
@@ -1,6 +1,6 @@
 {% extends "base.html" %}
 
-{% block title %}Error - Text Reading Assistant{% endblock %}
+{% block title %}Error - Speech Reading Assistant{% endblock %}
 
 {% block content %}
 <div class="row justify-content-center">
